# gamesense-typing-speed

./: Cargo.toml  README.md
src/: main.rs  typingspeed.rs
