[package]
name = "gamesense-typing-speed"
version = "0.1.0"
authors = ["Anton Ekström <anton.e.ekstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamesense = "0.1.2"
serde_json = "1.0.64"
# rdev = "0.5.1"
trayicon = { version = "0.1.1", features = ["winit"] }
winit = "0.24.0"